src/parser/GrammarParser.java
// Generated from src\parser\Grammar.g4 by ANTLR 4.7.2
package parser;

	import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, LITENT=38, 
		LITREAL=39, LITCHAR=40, IDENT=41, LINE_COMMENT=42, MULTILINE_COMMENT=43, 
		WHITESPACE=44;
	public static final int
		RULE_start = 0, RULE_estructura = 1, RULE_definicion = 2, RULE_sentencia = 3, 
		RULE_expr = 4, RULE_funcion = 5, RULE_parametro = 6, RULE_tipo = 7;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "estructura", "definicion", "sentencia", "expr", "funcion", 
			"parametro", "tipo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'struct'", "'{'", "';'", "'}'", "'var '", "':'", "'print'", "'printsp'", 
			"'println'", "'read'", "'='", "'if'", "'('", "')'", "'else'", "'while'", 
			"'return'", "','", "'['", "']'", "'.'", "'<'", "'>'", "'*'", "'/'", "'+'", 
			"'-'", "'>='", "'<='", "'=='", "'!='", "'&&'", "'||'", "'!'", "'int'", 
			"'float'", "'char'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "LITENT", "LITREAL", "LITCHAR", "IDENT", "LINE_COMMENT", 
			"MULTILINE_COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Program ast;
		public DefinicionContext definicion;
		public FuncionContext funcion;
		public EstructuraContext estructura;
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public List<DefinicionContext> definicion() {
			return getRuleContexts(DefinicionContext.class);
		}
		public DefinicionContext definicion(int i) {
			return getRuleContext(DefinicionContext.class,i);
		}
		public List<FuncionContext> funcion() {
			return getRuleContexts(FuncionContext.class);
		}
		public FuncionContext funcion(int i) {
			return getRuleContext(FuncionContext.class,i);
		}
		public List<EstructuraContext> estructura() {
			return getRuleContexts(EstructuraContext.class);
		}
		public EstructuraContext estructura(int i) {
			return getRuleContext(EstructuraContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			List<AST> prog = new ArrayList<AST>();
			setState(28);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << IDENT))) != 0)) {
				{
				setState(26);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__4:
					{
					setState(17);
					((StartContext)_localctx).definicion = definicion();
					prog.add(((StartContext)_localctx).definicion.ast);
					}
					break;
				case IDENT:
					{
					setState(20);
					((StartContext)_localctx).funcion = funcion();
					prog.add(((StartContext)_localctx).funcion.ast);
					}
					break;
				case T__0:
					{
					setState(23);
					((StartContext)_localctx).estructura = estructura();
					prog.add(((StartContext)_localctx).estructura.ast);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(30);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(31);
			match(EOF);
			 ((StartContext)_localctx).ast =  new Program(prog); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EstructuraContext extends ParserRuleContext {
		public DefStruct ast;
		public Token IDENT;
		public ParametroContext parametro;
		public List<ParametroContext> pa = new ArrayList<ParametroContext>();
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public EstructuraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estructura; }
	}

	public final EstructuraContext estructura() throws RecognitionException {
		EstructuraContext _localctx = new EstructuraContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_estructura);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(T__0);
			setState(35);
			((EstructuraContext)_localctx).IDENT = match(IDENT);
			setState(36);
			match(T__1);
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(37);
				((EstructuraContext)_localctx).parametro = parametro();
				((EstructuraContext)_localctx).pa.add(((EstructuraContext)_localctx).parametro);
				setState(38);
				match(T__2);
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(45);
			match(T__3);
			setState(46);
			match(T__2);
			 ((EstructuraContext)_localctx).ast =  new DefStruct(((EstructuraContext)_localctx).IDENT,((EstructuraContext)_localctx).pa);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionContext extends ParserRuleContext {
		public DefVar ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public DefinicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion; }
	}

	public final DefinicionContext definicion() throws RecognitionException {
		DefinicionContext _localctx = new DefinicionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definicion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(T__4);
			setState(50);
			((DefinicionContext)_localctx).IDENT = match(IDENT);
			setState(51);
			match(T__5);
			setState(52);
			((DefinicionContext)_localctx).tipo = tipo();
			setState(53);
			match(T__2);
			((DefinicionContext)_localctx).ast =  new DefVar(((DefinicionContext)_localctx).IDENT, ((DefinicionContext)_localctx).tipo.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public Sentence ast;
		public Token te;
		public ExprContext expr;
		public ExprContext left;
		public ExprContext right;
		public SentenciaContext sentencia;
		public List<SentenciaContext> tru = new ArrayList<SentenciaContext>();
		public List<SentenciaContext> fals = new ArrayList<SentenciaContext>();
		public List<SentenciaContext> se = new ArrayList<SentenciaContext>();
		public Token IDENT;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sentencia);
		int _la;
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				((SentenciaContext)_localctx).te = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8))) != 0)) ) {
					((SentenciaContext)_localctx).te = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(57);
				((SentenciaContext)_localctx).expr = expr(0);
				setState(58);
				match(T__2);
				((SentenciaContext)_localctx).ast =  new Print((((SentenciaContext)_localctx).te!=null?((SentenciaContext)_localctx).te.getText():null),((SentenciaContext)_localctx).expr.ast);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				match(T__9);
				setState(62);
				((SentenciaContext)_localctx).expr = expr(0);
				setState(63);
				match(T__2);
				((SentenciaContext)_localctx).ast =  new Read(((SentenciaContext)_localctx).expr.ast);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				((SentenciaContext)_localctx).left = expr(0);
				setState(67);
				match(T__10);
				setState(68);
				((SentenciaContext)_localctx).right = expr(0);
				setState(69);
				match(T__2);
				((SentenciaContext)_localctx).ast =  new Assignment(((SentenciaContext)_localctx).left.ast, ((SentenciaContext)_localctx).right.ast);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(72);
				match(T__11);
				setState(73);
				match(T__12);
				setState(74);
				((SentenciaContext)_localctx).expr = expr(0);
				setState(75);
				match(T__13);
				setState(76);
				match(T__1);
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__15) | (1L << T__16) | (1L << T__21) | (1L << T__33) | (1L << LITENT) | (1L << LITREAL) | (1L << LITCHAR) | (1L << IDENT))) != 0)) {
					{
					{
					setState(77);
					((SentenciaContext)_localctx).sentencia = sentencia();
					((SentenciaContext)_localctx).tru.add(((SentenciaContext)_localctx).sentencia);
					}
					}
					setState(82);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(83);
				match(T__3);
				setState(84);
				match(T__14);
				setState(85);
				match(T__1);
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__15) | (1L << T__16) | (1L << T__21) | (1L << T__33) | (1L << LITENT) | (1L << LITREAL) | (1L << LITCHAR) | (1L << IDENT))) != 0)) {
					{
					{
					setState(86);
					((SentenciaContext)_localctx).sentencia = sentencia();
					((SentenciaContext)_localctx).fals.add(((SentenciaContext)_localctx).sentencia);
					}
					}
					setState(91);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(92);
				match(T__3);
				((SentenciaContext)_localctx).ast =  new IfElseSentence(((SentenciaContext)_localctx).expr.ast,((SentenciaContext)_localctx).tru,((SentenciaContext)_localctx).fals);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(95);
				match(T__11);
				setState(96);
				match(T__12);
				setState(97);
				((SentenciaContext)_localctx).expr = expr(0);
				setState(98);
				match(T__13);
				setState(99);
				match(T__1);
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__15) | (1L << T__16) | (1L << T__21) | (1L << T__33) | (1L << LITENT) | (1L << LITREAL) | (1L << LITCHAR) | (1L << IDENT))) != 0)) {
					{
					{
					setState(100);
					((SentenciaContext)_localctx).sentencia = sentencia();
					((SentenciaContext)_localctx).tru.add(((SentenciaContext)_localctx).sentencia);
					}
					}
					setState(105);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(106);
				match(T__3);
				((SentenciaContext)_localctx).ast =  new IfSentence(((SentenciaContext)_localctx).expr.ast,((SentenciaContext)_localctx).tru);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(109);
				match(T__15);
				setState(110);
				match(T__12);
				setState(111);
				((SentenciaContext)_localctx).expr = expr(0);
				setState(112);
				match(T__13);
				setState(113);
				match(T__1);
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__15) | (1L << T__16) | (1L << T__21) | (1L << T__33) | (1L << LITENT) | (1L << LITREAL) | (1L << LITCHAR) | (1L << IDENT))) != 0)) {
					{
					{
					setState(114);
					((SentenciaContext)_localctx).sentencia = sentencia();
					((SentenciaContext)_localctx).se.add(((SentenciaContext)_localctx).sentencia);
					}
					}
					setState(119);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(120);
				match(T__3);
				((SentenciaContext)_localctx).ast =  new WhileSentence(((SentenciaContext)_localctx).expr.ast,((SentenciaContext)_localctx).se);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(123);
				match(T__16);
				setState(124);
				((SentenciaContext)_localctx).expr = expr(0);
				setState(125);
				match(T__2);
				((SentenciaContext)_localctx).ast =  new ReturnNode(((SentenciaContext)_localctx).expr.ast);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(128);
				match(T__16);
				setState(129);
				match(T__2);
				((SentenciaContext)_localctx).ast =  new ReturnNode(null);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(131);
				((SentenciaContext)_localctx).IDENT = match(IDENT);
				setState(132);
				match(T__12);
				setState(133);
				((SentenciaContext)_localctx).expr = expr(0);
				setState(134);
				match(T__13);
				setState(135);
				match(T__2);
				((SentenciaContext)_localctx).ast =  new FuncCall(((SentenciaContext)_localctx).IDENT,((SentenciaContext)_localctx).expr.ast);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Expr ast;
		public ExprContext left;
		public Token LITENT;
		public Token LITREAL;
		public Token LITCHAR;
		public Token IDENT;
		public ExprContext expr;
		public List<ExprContext> ex = new ArrayList<ExprContext>();
		public TipoContext tipo;
		public Token op;
		public ExprContext right;
		public TerminalNode LITENT() { return getToken(GrammarParser.LITENT, 0); }
		public TerminalNode LITREAL() { return getToken(GrammarParser.LITREAL, 0); }
		public TerminalNode LITCHAR() { return getToken(GrammarParser.LITCHAR, 0); }
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(141);
				((ExprContext)_localctx).LITENT = match(LITENT);
				((ExprContext)_localctx).ast =  new LitEnt(((ExprContext)_localctx).LITENT);
				}
				break;
			case 2:
				{
				setState(143);
				((ExprContext)_localctx).LITREAL = match(LITREAL);
				((ExprContext)_localctx).ast =  new LitReal(((ExprContext)_localctx).LITREAL);
				}
				break;
			case 3:
				{
				setState(145);
				((ExprContext)_localctx).LITCHAR = match(LITCHAR);
				((ExprContext)_localctx).ast =  new LitChar(((ExprContext)_localctx).LITCHAR);
				}
				break;
			case 4:
				{
				setState(147);
				((ExprContext)_localctx).IDENT = match(IDENT);
				((ExprContext)_localctx).ast =  new Variable(((ExprContext)_localctx).IDENT);
				}
				break;
			case 5:
				{
				setState(149);
				((ExprContext)_localctx).IDENT = match(IDENT);
				setState(150);
				match(T__12);
				setState(151);
				((ExprContext)_localctx).expr = ((ExprContext)_localctx).expr = expr(0);
				((ExprContext)_localctx).ex.add(((ExprContext)_localctx).expr);
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__17) {
					{
					{
					setState(152);
					match(T__17);
					setState(153);
					((ExprContext)_localctx).expr = ((ExprContext)_localctx).expr = expr(0);
					((ExprContext)_localctx).ex.add(((ExprContext)_localctx).expr);
					}
					}
					setState(158);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(159);
				match(T__13);
				((ExprContext)_localctx).ast = new MethodCallExpr(((ExprContext)_localctx).IDENT,((ExprContext)_localctx).ex);
				}
				break;
			case 6:
				{
				setState(162);
				match(T__12);
				setState(163);
				((ExprContext)_localctx).expr = expr(0);
				setState(164);
				match(T__13);
				((ExprContext)_localctx).ast =  ((ExprContext)_localctx).expr.ast ;
				}
				break;
			case 7:
				{
				setState(167);
				match(T__21);
				setState(168);
				((ExprContext)_localctx).tipo = tipo();
				setState(169);
				match(T__22);
				setState(170);
				match(T__12);
				setState(171);
				((ExprContext)_localctx).expr = expr(0);
				setState(172);
				match(T__13);
				((ExprContext)_localctx).ast =  new Cast(((ExprContext)_localctx).tipo.ast, ((ExprContext)_localctx).expr.ast);
				}
				break;
			case 8:
				{
				setState(175);
				match(T__33);
				setState(176);
				((ExprContext)_localctx).expr = expr(1);
				((ExprContext)_localctx).ast =  new ExprLogicaNe( ((ExprContext)_localctx).expr.ast);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(223);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(221);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(181);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(182);
						((ExprContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==T__23 || _la==T__24) ) {
							((ExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(183);
						((ExprContext)_localctx).right = ((ExprContext)_localctx).expr = expr(8);
						((ExprContext)_localctx).ast =  new ExprAritmetica(((ExprContext)_localctx).left.ast, (((ExprContext)_localctx).op!=null?((ExprContext)_localctx).op.getText():null), ((ExprContext)_localctx).right.ast);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(186);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(187);
						((ExprContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==T__25 || _la==T__26) ) {
							((ExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(188);
						((ExprContext)_localctx).right = ((ExprContext)_localctx).expr = expr(7);
						((ExprContext)_localctx).ast =  new ExprAritmetica(((ExprContext)_localctx).left.ast, (((ExprContext)_localctx).op!=null?((ExprContext)_localctx).op.getText():null), ((ExprContext)_localctx).right.ast);
						}
						break;
					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(191);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(192);
						((ExprContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__21) | (1L << T__22) | (1L << T__27) | (1L << T__28))) != 0)) ) {
							((ExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(193);
						((ExprContext)_localctx).right = ((ExprContext)_localctx).expr = expr(6);
						((ExprContext)_localctx).ast =  new ExprLogica(((ExprContext)_localctx).left.ast, (((ExprContext)_localctx).op!=null?((ExprContext)_localctx).op.getText():null), ((ExprContext)_localctx).right.ast);
						}
						break;
					case 4:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(196);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(197);
						((ExprContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==T__29 || _la==T__30) ) {
							((ExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(198);
						((ExprContext)_localctx).right = ((ExprContext)_localctx).expr = expr(5);
						((ExprContext)_localctx).ast =  new ExprLogica(((ExprContext)_localctx).left.ast, (((ExprContext)_localctx).op!=null?((ExprContext)_localctx).op.getText():null), ((ExprContext)_localctx).right.ast);
						}
						break;
					case 5:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(201);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(202);
						((ExprContext)_localctx).op = match(T__31);
						setState(203);
						((ExprContext)_localctx).right = ((ExprContext)_localctx).expr = expr(4);
						((ExprContext)_localctx).ast =  new ExprLogica(((ExprContext)_localctx).left.ast, (((ExprContext)_localctx).op!=null?((ExprContext)_localctx).op.getText():null), ((ExprContext)_localctx).right.ast);
						}
						break;
					case 6:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(206);
